@@ -325,6 +325,12 @@ PORTAGE_ELOG_CLASSES="warn error log"
 #                          syslog (sends all messages to syslog)
 #                          mail (send all messages to the mailserver defined 
 #                                in $PORTAGE_ELOG_MAILURI)
+#                          save_summary (like "save" but merges all messages
+#                                        in $PORT_LOGDIR/elog/summary.log,
+#                                        /var/log/portage/elog/summary.log if
+#                                        $PORT_LOGDIR is unset)
+#                          mail_summary (like "mail" but sends all messages in
+#                                        a single mail when emerge exits)
 #                      To use elog you should enable at least one module
 #PORTAGE_ELOG_SYSTEM="save mail"
 
